--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Fredianto</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Freelance Programmer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Software Developer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -95,7 +95,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Fredianto</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Freelace Programmer</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Software Developer</span></p>
                         <p><span class="title-s">Email: </span> <span>fredianto2405@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>0812-2815-0944</span></p>
                       </div>
@@ -110,7 +110,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Introduce my name is Fredianto, graduated from Bachelor of Informatics at the Yogyakarta Technological University. I'm currently working as a Freelance Programmer with experience 1 year.
+                      Introducing my name is Fredianto, I am a graduate of Informatics, Yogyakarta University of Technology. Currently I work as a Software Developer at PLN Icon Plus. I have experience in developing web-based systems, microservices, job schedulers and performing system maintenance.
                     </p>
                   </div>
                 </div>
@@ -119,36 +119,54 @@
               <div class="skill-mf">
                 <p class="title-s">Skill</p>
                 <div class="row">
-                  <div class="col-md-6">
-                    <span>HTML</span> <span class="pull-right">90%</span>
+                  <div class="col-md-4">
+                    <span>PHP</span> <span class="pull-right">90%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>CSS</span> <span class="pull-right">70%</span>
+                    <span>Python</span> <span class="pull-right">70%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>PHP</span> <span class="pull-right">85%</span>
+                    <span>Java</span> <span class="pull-right">85%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>JAVASCRIPT</span> <span class="pull-right">60%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <span>PYTHON</span> <span class="pull-right">85%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>JAVA</span> <span class="pull-right">65%</span>
+                    <span>JavaScript</span> <span class="pull-right">65%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>MYSQL</span> <span class="pull-right">80%</span>
+                  </div>
+                  <div class="col-md-4">
+                    <span>MySQL</span> <span class="pull-right">85%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>PL/SQL Oracle</span> <span class="pull-right">80%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>Spring Boot</span> <span class="pull-right">80%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>CodeIgniter</span> <span class="pull-right">80%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <span>Django</span> <span class="pull-right">65%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>REST API</span> <span class="pull-right">75%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>Job Scheduler</span> <span class="pull-right">75%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -188,7 +206,6 @@
                 <div class="w-more">
                   <span class="w-ctegory">CodeIgniter 3</span> -
                   <span class="w-ctegory">Bootstrap 4</span> -
-                  <span class="w-ctegory">SweetAlert</span> -
                   <span class="w-ctegory">MySQL</span>
                 </div>
               </div>
@@ -240,7 +257,6 @@
                 <div class="w-more">
                   <span class="w-ctegory">Django 3</span> -
                   <span class="w-ctegory">Bootstrap 4</span> -
-                  <span class="w-ctegory">SweetAlert</span> -
                   <span class="w-ctegory">MySQL</span>
                 </div>
               </div>
@@ -283,7 +299,8 @@
 
         </div>
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
+    <!-- End Portfolio Section -->
 
     <!-- ======= Contact Section ======= -->
     <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
@@ -300,7 +317,7 @@
                 </div>
                 <div class="more-info">
                   <ul class="list-ico">
-                    <li><span class="ion-ios-location"></span> KP. PASIRANDU, KADU, CURUG, TANGERANG</li>
+                    <li><span class="ion-ios-location"></span> Kadu, Curug, Tangerang</li>
                     <li><span class="ion-ios-telephone"></span> 0812-2815-0944</li>
                     <li><span class="ion-email"></span> fredianto2405@gmail.com</li>
                   </ul>
@@ -308,8 +325,8 @@
                 <div class="socials">
                   <ul>
                     <li><a href="https://www.facebook.com/freddy.anto.7796/"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                    <li><a href="https://instagram.com/_fredianto/"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                    <li><a href="https://twitter.com/fredianto2405/"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
+                    <li><a href="https://instagram.com/freddxant/"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                    <li><a href="https://twitter.com/freddxant/"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
                   </ul>
                 </div>
               </div>
