--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: DevFolio - v2.4.1
-  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body id="page-top">
@@ -67,10 +60,8 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Fredianto</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Software Developer</span><strong class="text-slider"></strong></p>
-          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
+          <p class="intro-subtitle"><span class="text-slider-items">Middle Software Engineer</span><strong class="text-slider"></strong></p>
         </div>
       </div>
     </div>
@@ -95,7 +86,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Fredianto</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Software Developer</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Middle Software Engineer</span></p>
                         <p><span class="title-s">Email: </span> <span>fredianto2405@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>0812-2815-0944</span></p>
                       </div>
